--- a/project/server/package.json
+++ b/project/server/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongodb": "^7.0.0",
-    "mongoose": "^9.0.0",
+    "mongoose": "^9.0.2",
     "nodemon": "^3.1.11"
   }
 }
