--- a/project/client/package.json
+++ b/project/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vitejs/plugin-react": "^4.7.0",
     "antd": "^6.1.2",
+    "axios": "^1.13.2",
     "eslint": "^8.57.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
